--- a/package.json
+++ b/package.json
@@ -2,19 +2,18 @@
   "name": "rss-netz98",
   "version": "0.0.0",
   "scripts": {
-    "dev": "cors-backdoor -t https://www.netz98.com & vite",
+    "dev": "cors-backdoor -t https://www.netz98.de & vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "cors-backdoor": "^1.0.6",
+    "fast-xml-parser": "^4.0.11",
     "vue": "^3.2.41",
-    "vue-router": "^4.1.5",
-    "fast-xml-parser":"^4.0.11",
-    "xml2js": "^0.4.23"
+    "vue-router": "^4.1.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.1.2",
-    "cors-backdoor": "^1.0.6",
     "vite": "^3.1.8"
   }
 }
